# Qt_water_quality

./: .gitignore  CMakeLists.txt  README.md  compliance.cpp  compliance.hpp  complianceItem.cpp  complianceItem.hpp  dashboard.cpp  dashboard.hpp  dataset.cpp  dataset.hpp  flourinatedCompounds.cpp  flourinatedCompounds.hpp  litterindicator.cpp  litterindicator.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  model.cpp  model.hpp  pollutantOverview.cpp  pollutantOverview.hpp  sample.cpp  sample.hpp  tableWindow.cpp  tableWindow.hpp
translations/: coursework_de.qm  coursework_de.ts  coursework_es.ts  coursework_fr.ts  coursework_it.ts
